--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body {
     background-color: #7393B3;
 }
 
-.navbar {
+.navbar{
     display: flex;
     justify-content: center; /* Center the navbar items */
     align-items: center; /* Vertically align items */
@@ -16,38 +16,32 @@ body {
     width: 100%; /* Full width */
     z-index: 1000; /* Ensure it stays on top of other content */
 }
-
-.logo {
+.logo{
     color: white;
     font-size: 24px; /* Logo font size */
     margin-right: 20px; /* Space between logo and nav links */
     text-decoration: underline;
 }
-
-.nav-links {
+.nav-links{
     list-style: none; /* Remove default list styles */
     display: flex; /* Flexbox for horizontal layout */
     gap: 15px; /* Space between links */
 }
-
-.nav-links li {
+.nav-links li{
     display: inline; /* Display list items inline */
 }
-
-.nav-links a {
+.nav-links a{
     color: white; /* Text color */
     text-decoration: none; /* Remove underline */
     padding: 10px 15px; /* Space around links */
     transition: background-color 0.3s; /* Smooth transition for hover effect */
 }
-
-.nav-links a:hover {
+.nav-links a:hover{
     background-color: #899499; /* Change background on hover */
     border-radius: 2vh;
 }
-
 /* Responsive Styles */
-@media (max-width: 768px) {
+@media (max-width: 768px){
     .navbar {
         flex-direction: column; /* Stack items vertically on smaller screens */
         align-items: flex-start; /* Align items to the start */
@@ -55,19 +49,16 @@ body {
         background-color: #36454F; /* Set a solid background for mobile view */
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3); /* Optional shadow for depth */
     }
-
-    .nav-links {
+    .nav-links{
         flex-direction: column; /* Stack links vertically */
         display: none; /* Hide by default */
         width: auto; /* Auto width to fit content */
         margin-top: 10px; /* Space above the links */
     }
-
-    .nav-links.active {
+    .nav-links.active{
         display: flex; /* Show links when active */
     }
-
-    .toggle-btn {
+    .toggle-btn{
         cursor: pointer; /* Change cursor to pointer */
         font-size: 24px; /* Increase font size for visibility */
         color: white; /* Color for the toggle button */
@@ -75,10 +66,19 @@ body {
         display: block; /* Make sure it is displayed on mobile */
     }
 }
-
 /* Hide the toggle button on larger screens */
-@media (min-width: 769px) {
+@media (min-width: 769px){
     .toggle-btn {
         display: none; /* Hide the toggle button on larger screens */
     }
+}
+
+.content-container {
+    max-width: 800px; /* Maximum width of the container */
+    margin: 80px auto 0; /* Center horizontally, add top margin to avoid overlap with navbar */
+    padding: 0 20px; /* Padding to prevent text from touching the edges */
+    text-align: center; /* Center text within the container */
+    padding-top: 3vh;
+    font-size: 3vh;
+    text-align: justify;
 }
