--- a/index.css
+++ b/index.css
@@ -85,7 +85,7 @@ body {
     }
 }
 .content-container{
-    max-width: 800px;
+    max-width: 90vw;
     margin: 80px auto 0;
     padding: 0 20px;
     text-align: center;
